--- a/styles/styles-v2.css
+++ b/styles/styles-v2.css
@@ -741,9 +741,8 @@ a:visited {
 @media only screen and (max-width: 740px) {
   .mobile-menu-wrapper {
     display: flex;
-    justify-content: center;
     font-family: var(--alt-ff);
-    font-size: 24px;
+    font-size: 1.6em;
     margin-top: -25px;
   }
 
@@ -751,7 +750,7 @@ a:visited {
     padding: 0;
     width: 370px;
     margin-top: 18px;
-    margin-left: -40px;
+    margin-left: -9px;
   }
 
   .mobile-menu {
@@ -773,7 +772,6 @@ a:visited {
     background-color: #4da62f;
     width: 300px;
     padding: 10px;
-    letter-spacing: 1px;
     list-style-type: none;
     text-decoration: none;
   }
